--- a/blog-single.html
+++ b/blog-single.html
@@ -87,7 +87,7 @@
                             </div>
                         </div>
                         <div class="link-btn">
-                            <a href="#" class="theme-btn btn-style-one">Download CV</a>
+                            <a href="#" class="theme-btn btn-style-one">简历下载</a>
                         </div>
                         <ul class="social-icon-two">
                             <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -100,7 +100,7 @@
                         <header class="header">
                             <ul class="main-menu">
                                 <li class="home"><a class="logo" href="index.html"><img src="images/logo.png" alt=""></a></li>
-                                <li class="active"><a href="#blog"><i class="flaticon-blog"></i>Blog</a></li>
+                                <li class="active"><a href="#blog"><i class="flaticon-blog"></i>博客</a></li>
                             </ul>
                         </header>
 
