--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                         <span class="typed-title"></span>
                                     </div>
                                 </div>
-                                <div class="text">本科就读于北京航空航天大学自动化专业，并在本学院继续攻读研究生。研究方向为计算机三维视觉——单目深度估计，利用单目相机采集的RGB图片进行深度估计，目前SCI在投3篇论文。</div>
+                                <div class="text">本科就读于北京航空航天大学自动化专业，并在本学院继续攻读研究生。研究方向为计算机三维视觉——深度估计，深度补全，三维重建等，目前SCI在投3篇论文。</div>
                                 <div class="link-btn">
                                     <a href="#" class="theme-btn btn-style-one">简历下载</a>
                                     <!-- <a href="#" class="theme-btn btn-style-two">Hire Me</a> -->
@@ -149,7 +149,7 @@
                         <div class="card-about card-item" id="about" style="background-image:url(images/background/2.jpg)">
                             <div class="card-inner">
                                 <h4 class="title">关于我</h4>
-                                <div class="text">本科就读于北京航空航天大学自动化专业，并在本学院继续攻读研究生。研究方向为计算机三维视觉——单目深度估计，利用单目相机采集的RGB图片进行深度估计，目前SCI在投3篇论文。</div>   
+                                <div class="text">本科就读于北京航空航天大学自动化专业，并在本学院继续攻读研究生。研究方向为计算机三维视觉——深度估计，深度补全，三维重建等，目前SCI在投3篇论文。</div>   
                                 <div class="info-list">
                                     <div class="row">
                                         <div class="col-md-6">
@@ -282,7 +282,7 @@
                                             <div class="timeline-block">
                                                 <div class="inner-box">
                                                     <h4>算法实习生</h4>
-                                                    <div class="date"><span>2022 </span>  / xx公司</div>
+                                                    <div class="date"><span>2022.9-2022.12 </span>  / 三星电子中国研究院</div>
                                                     
                                                 </div>
                                             </div>
@@ -496,9 +496,9 @@
                                     <div class="projects-block col-md-6">
                                         <div class="inner-box">
                                             <figure class="image">
-                                                <img src="images/gallery/play.jpg" alt="image">
+                                                <img src="images/gallery/guitar.png" alt="image">
                                                 <div class="overlay">
-                                                    <a class="lightbox-image option-btn" title="Image Caption Here" data-fancybox-group="example-gallery" href="images/gallery/play.jpg">
+                                                    <a class="lightbox-image option-btn" title="Image Caption Here" data-fancybox-group="example-gallery" href="images/galler/guitar.png">
                                                         <i class="fa fa-search"></i>
                                                     </a>                                
                                                 </div>
@@ -525,7 +525,66 @@
                                             </div>
                                         </div>
                                     </div>
-                                    
+                                    <div class="projects-block col-md-6">
+                                        <div class="inner-box">
+                                            <figure class="image">
+                                                <img src="images/gallery/photo.jpg" alt="image">
+                                                <div class="overlay">
+                                                    <a class="lightbox-image option-btn" title="Image Caption Here" data-fancybox-group="example-gallery" href="images/gallery/photo.jpg">
+                                                        <i class="fa fa-search"></i>
+                                                    </a>                                
+                                                </div>
+                                            </figure>
+                                            <div class="caption-title">   
+                                                <span>旅途</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="projects-block col-md-6">
+                                        <div class="inner-box">
+                                            <figure class="image">
+                                                <img src="images/gallery/finland.jpg" alt="image">
+                                                <div class="overlay">
+                                                    <a class="lightbox-image option-btn" title="Image Caption Here" data-fancybox-group="example-gallery" href="images/gallery/finland.jpg">
+                                                        <i class="fa fa-search"></i>
+                                                    </a>                                
+                                                </div>
+                                            </figure>
+                                            <div class="caption-title">   
+                                                <span>出国交流</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="projects-block col-md-6">
+                                        <div class="inner-box">
+                                            <figure class="image">
+                                                <img src="images/gallery/beijing.jpg" alt="image">
+                                                <div class="overlay">
+                                                    <a class="lightbox-image option-btn" title="Image Caption Here" data-fancybox-group="example-gallery" href="images/gallery/beijing.jpg">
+                                                        <i class="fa fa-search"></i>
+                                                    </a>                                
+                                                </div>
+                                            </figure>
+                                            <div class="caption-title">   
+                                                <span>北京</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="projects-block col-md-6">
+                                        <div class="inner-box">
+                                            <figure class="image">
+                                                <img src="images/gallery/feipan.jpg" alt="image">
+                                                <div class="overlay">
+                                                    <a class="lightbox-image option-btn" title="Image Caption Here" data-fancybox-group="example-gallery" href="images/gallery/feipan.jpg">
+                                                        <i class="fa fa-search"></i>
+                                                    </a>                                
+                                                </div>
+                                            </figure>
+                                            <div class="caption-title">   
+                                                <span>飞盘</span>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
